add routes and deploy in firebase

--- a/src/app/vistas/juego/juego.component.html
+++ b/src/app/vistas/juego/juego.component.html
@@ -3,3 +3,4 @@
     <input type="text" [(ngModel)]="user.nombre">
     <input type="text" [(ngModel)]="user.apellido">
     <input type="button" (click)="user.mostrarUsuario()" value="mostrar">
+    <router-outlet></router-outlet>
