--- a/src/app/vistas/login/login.component.html
+++ b/src/app/vistas/login/login.component.html
@@ -1,3 +1,4 @@
+<app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
 <div class="row justify-content-center text-center" style="margin-top: 125px;">
     <div class="col-4">
         <h1 class="cover-heading">Maximiliano vargas.</h1>
