--- a/src/app/vistas/bienvenido/bienvenido.component.html
+++ b/src/app/vistas/bienvenido/bienvenido.component.html
@@ -1,2 +1,12 @@
 <app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+            <router-outlet></router-outlet>    
+        </div>
+        <div class="col-md-4">
+            <h2>Lista de juegos</h2>
+        </div>
+    </div>
+</div>
+
