--- a/src/app/vistas/register/register.component.html
+++ b/src/app/vistas/register/register.component.html
@@ -1,8 +1,8 @@
 <app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
 <div class="col-md-4 offset-md-4 text-center form-signin">
     <form>
-        <img class="mb-4 rounded-circle" src="../../../assets/img/quienSoy.jpg" alt="" width="250" height="250">
-        <h1 class="h3 mb-3 fw-normal">Por favor conectese</h1>
+      <img class="mb-4 rounded-circle" src="../../../assets/img/quienSoy.jpg" alt="" width="250" height="250">  
+        <h1 class="h3 mb-3 fw-normal">Por favor registrarse</h1>
     
         <div class="form-floating">
           <input [(ngModel)]="user.email" name="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com"  >
@@ -12,23 +12,18 @@
           <input [(ngModel)]="user.password" name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password" >
           <label for="floatingPassword">Contraseña</label>
         </div>
-        <div class="checkbox mb-3">
-          <label>
-             usuario admin@admin.com | clave admin123
-          </label>
-        </div>
+    
         <div class="checkbox mb-3">
           <label>
             <input type="checkbox" value="remember-me" disabled> Recuerdame
           </label>
-          <button class="btn btn-danger" (click)="completeData()">logeo rapido</button>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <button class="w-100 btn btn-lg btn-danger" type="submit" (click)="login()">Conectarse</button>    
+                <button class="w-100 btn btn-lg btn-danger" type="submit" (click)="register()">Registrarse</button>    
             </div>
             <div class="col-md-6">
-                <button class="w-100 btn btn-lg btn-outline-danger" type="submit" (click)="register()">Registrarse</button>    
+                <button class="w-100 btn btn-lg btn-outline-danger" type="submit" (click)="login()">Conectarse</button>    
             </div>
         </div>
       </form>
