--- a/src/app/vistas/bienvenido/bienvenido.component.html
+++ b/src/app/vistas/bienvenido/bienvenido.component.html
@@ -5,6 +5,7 @@
             <router-outlet></router-outlet>    
         </div>
         <div class="col-md-4">
+            <app-chat></app-chat>
             <h2>Lista de juegos</h2>
         </div>
     </div>
