--- a/src/app/vistas/chat/chat.component.html
+++ b/src/app/vistas/chat/chat.component.html
@@ -1,12 +1,12 @@
 <div *ngFor="let message of messages | async">
-    <div class="message" *ngIf="!message.myMsg; else myMessage">
+    <div class="alert alert-primary" *ngIf="!message.myMsg; else myMessage">
         <b >{{ message.fromName }}</b><br>
         <span>{{ message.msg }}
         <div class="time"><br>{{ message.createdAt?.toMillis() | date:'short' }}</div>
         </span>
     </div>
     <ng-template #myMessage>
-        <div class="other-message   " >
+        <div class="alert alert-success" >
             <span>{{ message.msg }}
             <div class="time"><br>{{ message.createdAt?.toMillis() | date:'short' }}</div>
             </span>
