--- a/src/app/bienvenido/vistas/sobre-mi/sobre-mi.component.html
+++ b/src/app/bienvenido/vistas/sobre-mi/sobre-mi.component.html
@@ -1,1 +1,20 @@
-<p>sobre-mi works!</p>
+<div class="text-center base">
+    
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <header class="masthead mb-auto">
+            <div class="inner">
+            <h3 class="masthead-brand">Sobre Mi</h3>
+            </div>
+        </header>
+        
+        <main role="main" class="inner cover">
+            <h1 class="cover-heading">Maximiliano vargas.</h1>
+            <img src="../../../assets/img/quienSoy.jpg" alt="" class="img-fluid rounded-circle" width="250" height="250">
+            <p class="lead">soy maximiliano vargas, estudiante de la UTN FRA, programador en globant.</p>
+            <p class="lead">mi juego propio sera el anagrama, se encontraran palabras desordenadas y habra que seleccionar la palabra adecuada.</p>
+            <p class="lead">
+            <a href="https://github.com/Shilua" class="btn btn-lg btn-danger">github</a>
+            </p>
+        </main>
+    </div>
+</div>
