--- a/src/app/bienvenido/vistas/main/main.component.html
+++ b/src/app/bienvenido/vistas/main/main.component.html
@@ -16,6 +16,7 @@
                   <a class="nav-link" (click)="navigate('anagrama')">Anagrama</a>
                 </li>
               </ul>
+              <app-encuesta></app-encuesta>
             <router-outlet></router-outlet>    
         </div>
         <div class="col-md-4">
