--- a/src/app/bienvenido/vistas/chat/chat.component.html
+++ b/src/app/bienvenido/vistas/chat/chat.component.html
@@ -1,29 +1,38 @@
-<div *ngFor="let message of messages | async">
-    <div class="alert alert-primary" *ngIf="!message.myMsg; else myMessage">
-        <b >{{ message.fromName }}</b><br>
-        <span>{{ message.msg }}
-        <div class="time"><br>{{ message.createdAt?.toMillis() | date:'short' }}</div>
-        </span>
+<div class="card text-center">
+    <div class="card-header">
+      Chat
     </div>
-    <ng-template #myMessage>
-        <div class="alert alert-success" >
+    <div class="card-body" id="chat">
+      <div *ngFor="let message of messages | async">
+        <div class="alert alert-primary" *ngIf="!message.myMsg; else myMessage">
+            <b >{{ message.fromName }}</b><br>
             <span>{{ message.msg }}
             <div class="time"><br>{{ message.createdAt?.toMillis() | date:'short' }}</div>
             </span>
         </div>
-      </ng-template>
-</div>
-<div>
-    <div>
+        <ng-template #myMessage>
+            <div class="alert alert-success" >
+                <span>{{ message.msg }}
+                <div class="time"><br>{{ message.createdAt?.toMillis() | date:'short' }}</div>
+                </span>
+            </div>
+          </ng-template>
+    </div>
+    </div>
+    <div class="card-footer text-muted">
         <div>
-            <textarea autoGrow="true" class="form-control" rows="1" maxLength="500" [(ngModel)]="newMsg"></textarea>
-        </div>
-    <br>
-        <div>
-            <button expand="block" fill="clear" color="primary" [disabled]="newMsg === ''"
-            class="btn btn-danger" (click)="sendMessage()">
-                enviar
-            </button>
+            <div>
+                <div>
+                    <textarea autoGrow="true" class="form-control" rows="1" maxLength="500" [(ngModel)]="newMsg"></textarea>
+                </div>
+            <br>
+                <div>
+                    <button expand="block" fill="clear" color="primary" [disabled]="newMsg === ''"
+                    class="btn btn-danger" (click)="sendMessage()">
+                        enviar
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+  </div>
