--- a/src/app/bienvenido/vistas/juegos/ahorcado/ahorcado.component.html
+++ b/src/app/bienvenido/vistas/juegos/ahorcado/ahorcado.component.html
@@ -1,31 +1,33 @@
-<div class="row">
-    <div class="col text-center">
-        <h3>Intentos <small> {{ intentos }} / 9</small></h3>
+<div>
+    <div class="row">
+        <div class="col text-center">
+            <h3>Intentos <small> {{ intentos }} / 9</small></h3>
+        </div>
     </div>
-</div>
-
-<div class="row">
-    <div class="col text-center">
-        <h1>{{palabraOculta}}</h1>
+    
+    <div class="row">
+        <div class="col text-center">
+            <h1>{{palabraOculta}}</h1>
+        </div>
     </div>
-</div>
-
-<div *ngIf="gano" class="row">
-    <div class="col text-center">
-        <h1> ¡FELICIDADES HAS GANADO! </h1>
-        <h4> :) </h4>
+    
+    <div *ngIf="gano" class="row">
+        <div class="col text-center">
+            <h1> ¡FELICIDADES HAS GANADO! </h1>
+            <h4> :) </h4>
+        </div>
     </div>
-</div>
-
-<div *ngIf="perdio" class="row">
-    <div class="col text-center">
-        <h1> HAS PERDIDO :( </h1>
-        <h4> {{ palabra }} </h4>
+    
+    <div *ngIf="perdio" class="row">
+        <div class="col text-center">
+            <h1> HAS PERDIDO :( </h1>
+            <h4> {{ palabra }} </h4>
+        </div>
     </div>
-</div>
-
-<div class="row" *ngIf="!gano && !perdio">
-    <div class="col text-center">
-        <button (click)="comprobar( letra )" *ngFor="let letra of letras" class="btn btn-danger"> {{ letra }} </button>
+    
+    <div class="row" *ngIf="!gano && !perdio">
+        <div class="col text-center">
+            <button (click)="comprobar( letra )" *ngFor="let letra of letras" class="btn btn-danger"> {{ letra }} </button>
+        </div>
     </div>
 </div>
