--- a/src/app/bienvenido/vistas/juegos/mayor-menor/mayor-menor.component.html
+++ b/src/app/bienvenido/vistas/juegos/mayor-menor/mayor-menor.component.html
@@ -1,4 +1,59 @@
-<p>{{actual}}</p>
-<button class="btn btn-danger" (click)="minimo()">minimo</button>
-<button class="btn btn-danger" (click)="maximo()">maximo</button>
+<div class="playingCards text-center">
+    <div class="carta rank-1 spades" *ngIf= "actual == 1">
+        <span class="rank">1</span>
+        <span class="suit">&spades;</span>
+    </div>
+    <div class="carta rank-2 spades" *ngIf= "actual == 2">
+        <span class="rank">2</span>
+        <span class="suit">&spades;</span>
+    </div>
+    <div class="carta rank-3 spades" *ngIf= "actual == 3">
+        <span class="rank">3</span>
+        <span class="suit">&spades;</span>
+    </div>
+    <div class="carta rank-4 spades" *ngIf= "actual == 4">
+        <span class="rank">4</span>
+        <span class="suit">&spades;</span>
+    </div>
+    <div class="carta rank-5 spades" *ngIf= "actual == 5">
+        <span class="rank">5</span>
+        <span class="suit">&spades;</span>
+    </div>
+    <div class="carta rank-6 spades" *ngIf= "actual == 6">
+        <span class="rank">6</span>
+        <span class="suit">&spades;</span>
+    </div>
+    <div class="carta rank-7 spades" *ngIf= "actual == 7">
+        <span class="rank">7</span>
+        <span class="suit">&spades;</span>
+    </div>
+    <div class="carta rank-8 spades" *ngIf= "actual == 8">
+        <span class="rank">8</span>
+        <span class="suit">&spades;</span>
+    </div>
+    <div class="carta rank-9 spades" *ngIf= "actual == 9">
+        <span class="rank">9</span>
+        <span class="suit">&spades;</span>
+    </div><div class="carta rank-10 spades" *ngIf= "actual == 10">
+        <span class="rank">10</span>
+        <span class="suit">&spades;</span>
+    </div>
+    <div class="carta rank-j spades" *ngIf= "actual == 11">
+        <span class="rank">J</span>
+        <span class="suit">&spades;</span>
+    </div>
+    <div class="carta rank-q spades" *ngIf= "actual == 12">
+        <span class="rank">Q</span>
+        <span class="suit">&spades;</span>
+    </div>
+    <div class="carta rank-k spades" *ngIf= "actual == 13">
+        <span class="rank">K</span>
+        <span class="suit">&spades;</span>
+    </div>
+</div>
+<div class="text-center">
+        <button class="btn btn-danger" (click)="minimo()">minimo</button>
+        <button class="btn btn-danger" (click)="maximo()">maximo</button>    
+</div>
+
 
