--- a/src/app/bienvenido/vistas/nav-bar/nav-bar.component.html
+++ b/src/app/bienvenido/vistas/nav-bar/nav-bar.component.html
@@ -7,10 +7,13 @@
       <div class="collapse navbar-collapse" id="navbarScroll">
         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
           <li class="nav-item">
-            <a class="nav-link" (click)="bienvenido()">Bienvenido</a>
+            <a class="nav-link" (click)="navigate('')">Bienvenido</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" (click)="sobreMi()">Quien soy</a>
+            <a class="nav-link" (click)="navigate('encuesta')">Encuesta</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="navigate('sobre-mi')">Quien soy</a>
           </li>
           
         </ul>
