--- a/src/app/bienvenido/vistas/sobre-mi/sobre-mi.component.html
+++ b/src/app/bienvenido/vistas/sobre-mi/sobre-mi.component.html
@@ -9,7 +9,7 @@
         
         <main role="main" class="inner cover">
             <h1 class="cover-heading">Maximiliano vargas.</h1>
-            <img src={{img}} alt="" class="img-fluid rounded-circle" width="250" height="250">
+            <img src="../../../../assets/img/quienSoy.jpg" alt="" class="img-fluid rounded-circle" width="250" height="250">
             <p class="lead">soy maximiliano vargas, estudiante de la UTN FRA, programador en globant.</p>
             <p class="lead">mi juego propio sera el anagrama, se encontraran palabras desordenadas y habra que seleccionar las letras de la palabra adecuada.</p>
             <p class="lead">
